# OsirisEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/Sandbox/: CMakeLists.txt
apps/Sandbox/src/: sandbox_app.cpp
cmake/: OsirisReflect.cmake
modules/app/: CMakeLists.txt
modules/app/include/osiris/app/: app_api.hpp  application.hpp
modules/app/src/: application.cpp  entry_point.cpp
modules/core/: CMakeLists.txt
modules/core/include/osiris/core/: arena.hpp  core_api.hpp  engine_context.hpp  job_system.hpp  log.hpp  types.hpp
modules/core/src/: job_system.cpp  log.cpp
modules/core/tests/: CMakeLists.txt  arena_test.cpp
modules/platform/: CMakeLists.txt
modules/platform/include/osiris/platform/: platform_api.hpp  window.hpp
modules/platform/src/: window.cpp
modules/reflect/: CMakeLists.txt
modules/reflect/include/osiris/reflect/: markers.hpp  reflect.hpp  reflect_api.hpp  reflect_macros.hpp  registry.hpp  type_info.hpp
modules/reflect/src/: registry.cpp
modules/reflect/tests/: CMakeLists.txt  codegen_test.cpp  demo_component.hpp  reflect_test.cpp
modules/rhi/: CMakeLists.txt
modules/rhi/include/osiris/rhi/: device.hpp  pipeline.hpp  renderer.hpp  rhi_api.hpp  shader_compiler.hpp  swapchain.hpp
modules/rhi/src/: device.cpp  pipeline.cpp  renderer.cpp  shader_compiler.cpp  swapchain.cpp
tools/reflect-codegen/: reflect_codegen.py
tools/reflect-codegen/example/: demo_component.hpp
